[project]
name = "tweets"
version = "0.1.0"
description = "A MCP server project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.1.0",]
[[project.authors]]
name = "harshita-200"
email = "harshitakedia29@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
tweets = "tweets:main"
